<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/app_toolbar_shared"/>

    <Button
        android:id="@+id/friends_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryLight"
        android:text="@string/friends"/>

    <Button
        android:id="@+id/edit_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryLight"
        android:text="@string/edit_profile"
        android:onClick="editUserProfile"/>

    <Button
        android:id="@+id/delete_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryLight"
        android:text="@string/delete_account"
        android:onClick="deleteAccount"/>

</LinearLayout>