<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <FrameLayout
        android:id="@+id/widget_label"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/tasku"
            android:contentDescription="@string/app_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="48dp"
            android:text="@string/open_tasks"
            android:textSize="20dp"
            android:textColor="@android:color/black"/>

    </FrameLayout>

    <ListView
        android:id="@+id/widget_tasklist_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </ListView>

    <Button
        android:id="@+id/update_widget_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/update"
        android:background="@color/colorPrimaryLight" />

</LinearLayout>