<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="440dp"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/current_task_name_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_name_"
                android:textSize="24sp"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_by"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryText"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"/>

                <ProgressBar
                    android:id="@+id/task_creator_avatar_fragment_progress_bar"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:visibility="gone"/>


                <ImageView
                    android:id="@+id/task_creator_avatar_fragment"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/assigned_user_icon"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/task_creator" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:orientation="horizontal"
                android:layout_marginTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="18sp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/assignees"/>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/assignee_avatar_recyclerview_fragment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginStart="8dp">

                </android.support.v7.widget.RecyclerView>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_description_entry"
                android:textColor="@color/colorPrimaryText"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>

            <TextView
                android:id="@+id/current_task_description_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/task_description_"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/task_feed_recyclerview_fragment"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:paddingStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp">

            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <EditText
                        android:id="@+id/current_task_message_fragment"
                        android:layout_width="380dp"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimaryLight"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="8dp"
                        android:hint="@string/enter_message"/>

                    <ImageView
                        android:id="@+id/current_task_message_send_fragment"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/send"
                        android:contentDescription="@string/send_message" />

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

</LinearLayout>