<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/friends_page_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        app:layout_constraintTop_toTopOf="parent">

        <include layout="@layout/app_toolbar_shared"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/friend_selection_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@id/friends_page_toolbar">

        <FrameLayout
            android:id="@+id/friend_requests_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

            <TextView
                android:id="@+id/friend_request_tab"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20dp"
                android:text="@string/requests"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/sent_invites_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

        <TextView
            android:id="@+id/request_sent_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text="@string/sent_invites"/>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/friend_list_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp">

        <TextView
            android:id="@+id/friend_list_tab"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:text="@string/friends"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragment_friend_list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/friend_selection_section"/>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_friends_fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="bottom|end"
        android:src="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:contentDescription="@string/add_new_friend"/>

</android.support.constraint.ConstraintLayout>